test/analyze/match/exhaustive_simple_types.exp
Error: Inexhaustive pattern matching. For example the pattern `false` is not matched.
test/analyze/match/exhaustive_simple_types.myte:36:2-38:3
 36 | /   match (true) {
    | |   ^^^^^^^^^^^^^^
 37 | |     | true -> ()
    | | ^^^^^^^^^^^^^^^^
 38 | |   }
    | \ ^^^^

Error: Inexhaustive pattern matching. For example the pattern `true` is not matched.
test/analyze/match/exhaustive_simple_types.myte:40:2-42:3
 40 | /   match (false) {
    | |   ^^^^^^^^^^^^^^^
 41 | |     | false -> ()
    | | ^^^^^^^^^^^^^^^^^
 42 | |   }
    | \ ^^^^

Error: Inexhaustive pattern matching. For example the pattern `""` is not matched.
test/analyze/match/exhaustive_simple_types.myte:57:2-59:3
 57 | /   match ("") {
    | |   ^^^^^^^^^^^^
 58 | |     | "a" -> ()
    | | ^^^^^^^^^^^^^^^
 59 | |   }
    | \ ^^^^

Error: Inexhaustive pattern matching. For example the pattern `"*"` is not matched.
test/analyze/match/exhaustive_simple_types.myte:61:2-63:3
 61 | /   match ("") {
    | |   ^^^^^^^^^^^^
 62 | |     | "" -> ()
    | | ^^^^^^^^^^^^^^
 63 | |   }
    | \ ^^^^

Error: Inexhaustive pattern matching. For example the pattern `"**"` is not matched.
test/analyze/match/exhaustive_simple_types.myte:65:2-68:3
 65 | /   match ("") {
    | |   ^^^^^^^^^^^^
 66 | |     | "" -> ()
    | | ^^^^^^^^^^^^^^
 67 | |     | "*" -> ()
    | | ^^^^^^^^^^^^^^^
 68 | |   }
    | \ ^^^^

Error: Inexhaustive pattern matching. For example the pattern `"***"` is not matched.
test/analyze/match/exhaustive_simple_types.myte:70:2-74:3
 70 | /   match ("") {
    | |   ^^^^^^^^^^^^
 71 | |     | "" -> ()
    | | ^^^^^^^^^^^^^^
 72 | |     | "*" -> ()
    | | ^^^^^^^^^^^^^^^
 73 | |     | "**" -> ()
    | | ^^^^^^^^^^^^^^^^
 74 | |   }
    | \ ^^^^

Error: Inexhaustive pattern matching. For example the pattern `0` is not matched.
test/analyze/match/exhaustive_simple_types.myte:89:2-91:3
 89 | /   match (1) {
    | |   ^^^^^^^^^^^
 90 | |     | 1 -> ()
    | | ^^^^^^^^^^^^^
 91 | |   }
    | \ ^^^^

Error: Inexhaustive pattern matching. For example the pattern `1` is not matched.
test/analyze/match/exhaustive_simple_types.myte:93:2-95:3
 93 | /   match (1) {
    | |   ^^^^^^^^^^^
 94 | |     | 0 -> ()
    | | ^^^^^^^^^^^^^
 95 | |   }
    | \ ^^^^

Error: Inexhaustive pattern matching. For example the pattern `3` is not matched.
test/analyze/match/exhaustive_simple_types.myte:97:2-101:3
 97  | /   match (1) {
     | |   ^^^^^^^^^^^
 98  | |     | 0 -> ()
     | | ^^^^^^^^^^^^^
 99  | |     | 1 -> ()
     | | ^^^^^^^^^^^^^
 100 | |     | 2 -> ()
     | | ^^^^^^^^^^^^^
 101 | |   }
     | \ ^^^^