test/analyze/match/exhaustive_simple_types.myte
module test

fun testUnit() {
  // Exhaustive
  match (()) {
    | () -> ()
  }

  match (()) {
    | _ -> ()
  }
}

fun testBools() {
  // Exhaustive
  match (true) {
    | true -> ()
    | false -> ()
  }

  match (true) {
    | true -> ()
    | _ -> ()
  }

  match (true) {
    | false -> ()
    | _ -> ()
  }

  match (true) {
    | _ -> ()
  }

  // Inexhaustive
  match (true) {
    | true -> ()
  }

  match (false) {
    | false -> ()
  }
}

fun testStrings() {
  // Exhaustive
  match ("") {
    | _ -> ()
  }

  match ("") {
    | "a" -> ()
    | _ -> ()
  }

  // Inexhaustive
  match ("") {
    | "a" -> ()
  }

  match ("") {
    | "" -> ()
  }

  match ("") {
    | "" -> ()
    | "*" -> ()
  }

  match ("") {
    | "" -> ()
    | "*" -> ()
    | "**" -> ()
  }
}

fun testIntegers() {
  // Exhaustive
  match (1) {
    | _ -> ()
  }

  match (1) {
    | 1 -> ()
    | _ -> ()
  }

  // Inexhaustive
  match (1) {
    | 1 -> ()
  }

  match (1) {
    | 0 -> ()
  }

  match (1) {
    | 0 -> ()
    | 1 -> ()
    | 2 -> ()
  }
}

fun testChars() {
  // Exhaustive
  match ('a') {
    | 'a' -> ()
    | _ -> ()
  }

  // Inexhaustive
  match ('a') {
    | 'a' -> ()
  }

  match ('a') {
    | 'a' -> ()
    | 'b' -> ()
    | '0' -> ()
  }
}

fun main() {}